# backrest

./: .dockerignore  .gitattributes  .gitignore  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN-NOTES.md  Dockerfile  Dockerfile.alpine  Dockerfile.example  Dockerfile.scratch  README.md  backrest.go  flake.nix  go.mod  go.sum  go.work.sum  install.sh  resticui.go  restora.go  shell.nix  test.txt  uninstall.sh  webuinix.go  webuiwin.go
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
.jules/: bolt.md
docker/: Dockerfile  docker-compose.yml
docs/: .eslintrc.cjs  .gitignore  app.config.ts  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tokens.config.ts  tsconfig.json
hack/: build.sh  install-deps.sh  run.sh
proto/: buf.gen.yaml  build.sh  package-lock.json  update.sh
rusticbindings/: Cargo.toml  build.rs
rusticbindings/src/: main.rs  proto.rs
scripts/: build-all.sh  build-docker.sh  build.sh  generate-installers.sh  get.sh  latest-restic-version.sh  manage.sh  run.sh  update-restic-version.sh
static/: index.html  static.go
v1/: authentication.pb.go  config.pb.go  crypto.pb.go  operations.pb.go  restic.pb.go  service.pb.go  syncservice.pb.go
webui/: .gitignore  .prettierignore  .prettierrc  .proxyrc.json  GEMINI.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  static.go  stats.html  tsconfig.json  vite.config.ts  vitest.config.ts  webui.go  webui_test.go  webuinix.go  webuiwin.go
(+640 files in other folders)
